Commit - Iniciado a documentação com Swagger, refatorado as classes de Conta a pagar pera melhor performace e bugs silenciosos e clean code.